--- a/css/style.css
+++ b/css/style.css
@@ -217,10 +217,12 @@ body {
 }
 
 .hero-section {
-  display: block;
-  background: var(--text-color);
   text-align: center;
   padding: 188px 0;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url('../images/hero/hero-image.jpg');
+  background-size: cover;
+  /*background-color: var(--text-color);*/
 }
 .background-four-section {
   background-color: #f4f4fd;
@@ -309,4 +311,81 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-weight: 400;
+}
+.secondary-section-picture {
+  background-color: rgba(244, 244, 253, 1);
+  height: 112px;
+  width: 264px;
+  border-radius: 4px;
+  padding: 24px 0;
+}
+.picture-list-icon {
+  display: block;
+  margin: auto;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  column-gap: 24px;
+  margin-top: 8px;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+  fill: #404bbf;
+}
+.section-customers {
+  padding-top: 120px;
+}
+.section-customer-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding-bottom: 120px;
+  margin-top: 72px;
+}
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+.customers-list-icon {
+  display: block;
+  background-position: center center;
+  fill: #8e8f99;
+}
+.customers-list-item {
+  height: 88px;
+  width: calc((100%-24px) / 6);
+}
+.customers-link:hover customers-list-icon,
+.customers-link:focus customers-list-icon {
+  fill: #404bbf;
+}
+.footer-list {
+  display: flex;
+  gap: 120px;
+}
+.title-footer {
+  color: rgba(255, 255, 255, 1);
+  font-family: var(--main-font-family);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  margin-bottom: 16px;
 }
