--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,6 @@ body {
   text-decoration: none;
 }
 .page-header {
-  background: #ffffff;
-  /* CORNFLOWER */
-
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -366,13 +363,12 @@ body {
   background-color: #404bbf;
 }
 .section-customers {
-  padding-top: 120px;
+  padding-top: 120px 0;
 }
 .section-customer-list {
   display: flex;
   justify-content: center;
   gap: 24px;
-  padding-bottom: 120px;
   margin-top: 72px;
 }
 .customers-link {
