--- a/css/style.css
+++ b/css/style.css
@@ -333,10 +333,12 @@ body {
   width: 264px;
   border-radius: 4px;
   padding: 24px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .picture-list-icon {
   display: block;
-  margin: auto;
 }
 .social-list {
   display: flex;
