--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   --text-color: #2e2f42;
   --color-brand: #4d5ae5;
   --main-color: #434455;
+  --color-icon: #f4f4fd;
 }
 h1,
 h2,
@@ -247,7 +248,7 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 .employees-text-content {
-  padding: 32px 16px;
+  padding: 32px 0;
   text-align: center;
 }
 .container {
@@ -346,7 +347,7 @@ body {
 .social-list {
   display: flex;
   justify-content: center;
-  column-gap: 24px;
+  gap: 24px;
   margin-top: 8px;
 }
 
@@ -360,7 +361,7 @@ body {
   background-color: #4d5ae5;
 }
 .social-list-icon {
-  fill: #ffffff;
+  fill: var(--color-icon);
 }
 
 .social-list-link:hover,
